compiler/test-data/parser/theme/errors/variant_missing_name.frel
module theme.errors.variant_missing_name

theme AppTheme {
    padding : u32 = 16

    variant {
        padding = 8
    }
}
